<resources>
    <string name="app_name">EindProject</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="login_button_text">Login</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="noConnection">This app needs a valid interconnection to work. Please establish one.</string>
    <string name="pokemon_image_content_desc">Pokemon Image</string>
    <string name="nav_pokemon">Pokemon</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="send_immage_button">Share Image</string>
    <string name="edit_name">Edit Name</string>
    <string name="permission_camera">PERMISSION_CAMERA</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
</resources>
