<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pokemon"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_pokemon" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_logout" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item android:id="@+id/nav_share" android:title="Share" android:icon="@drawable/ic_message"/>-->
<!--        </menu>-->
<!--    </item>-->

</menu>